--- a/actualizacion-catastral-ms-dev.properties
+++ b/actualizacion-catastral-ms-dev.properties
@@ -1,5 +1,5 @@
 app.local=true
-app.url.session.status=https://pullinquedesa04.sii.cl/app/session/status
+app.url.session.status=https://pullinquedesa04.sii.cl/app/session/status/fals
 
 #Base de datos
 catastro.datasource.url=jdbc:oracle:thin:@queilen:1540:koala
@@ -36,6 +36,7 @@ springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.api-docs.path=/api-docs
 springdoc.version=@springdoc.version@
+springdoc.swagger-ui.with-credentials=true
 
 #Request mapping de los controladores
 request.mapping.catastro=/catastro
