--- a/actualizacion-catastral-ms-dev.properties
+++ b/actualizacion-catastral-ms-dev.properties
@@ -1,5 +1,5 @@
 app.local=true
-app.url.session.status=https://pullinquedesa04.sii.cl/app/session/status/fals
+app.url.session.status=https://pullinquedesa04.sii.cl/app/session/status
 
 #Base de datos
 catastro.datasource.url=jdbc:oracle:thin:@queilen:1540:koala
